Fixed email modal inputs not allowing input on mobile. The page now reloads when going from desktop to iPad.

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -623,6 +623,16 @@
             margin: 0px 0 6px 0;
 		}
 	}
+	/*.rank-answers-list li:hover {
+		background-color: #edb129 !important;
+		.label-wrap {
+			background-color: #edb129 !important;
+			background-position: 0 -57px !important;
+		}
+		span {
+			color: white;
+		}
+	}*/
 	.rank-numbers-list li {
 		width: 63px;
 		height: 53px;
